--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,10 @@
   width: 100vw;
 }
 
+.themed {
+  fill: white;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -121,6 +125,9 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .themed {
+    fill: black;
+  }
   .card,
   .footer {
     border-color: #222;
