--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,7 @@
   background-attachment: fixed;
   height: 100vh;
   width: 100vw;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   opacity: 20%;
